tests/NormalTests/paczka1/fuzzy1/60836949.err
Error in line 10: S697 S112 44,3
Error in line 22: bZ6W8EFwNL S112 27,4
